<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>

    <string name="app_name">Cockpit5</string>
    
    <!-- Links -->
    <string name="link_about">http://jetroplatforms.com/appcontent/about_page/about.html</string>
    <string name="link_help">http://jetroplatforms.com/appcontent/help_page/toolbar.html</string>
    
    <!-- Search strings -->
    <string name="search_label">Jetro Mobile Client</string>
    <string name="search_settings_description">Secure Remote Applications</string>

    <!-- lables -->
    <string name="connection_name_lbl">Connection Name</string>
    <string name="host_ip_lbl">Host IP</string>
    <string name="host_port_lbl">Host Port</string>
    <string name="connection_mode_lbl">Connection Mode</string>
    <string name="connect_lbl">CONNECT</string>
    <string name="user_name_lbl">User name</string>
    <string name="password_lbl">Password</string>
    <string name="domain_lbl">Domain</string>
    <string name="email_lbl">Email</string>
    <string name="login_lbl">LOGIN</string>
    <string name="cancel_lbl">CANCEL</string>
    <string name="old_password_lbl">Old password</string>
    <string name="new_password_lbl">New password</string>
    <string name="confirm_new_password_lbl">Confirm new pasword</string>
    <string name="reset_lbl">RESET</string>
    <string name="add_new_connection_lbl">ADD NEW CONNECTION</string>
    <string name="loading_text">Loading.... please wait.</string>
    
    <!-- Hints -->
    <string name="connection_name_hint">Connection name here</string>
    <string name="host_ip_hint">Host IP here</string>
    <string name="host_port_hint">Host Port here</string>
    <string name="connection_mode_hint">Choose connection mode</string>
    <string name="user_name_hint">Enter user name here</string>
    <string name="password_hint">Enter password here</string>
    <string name="domain_hint">Enter domain here</string>
    <string name="email_hint">Enter email here</string>
    <string name="old_password_hint">Enter old password here</string>
    <string name="new_password_hint">Enter new password here</string>
    <string name="confirm_new_password_hint">Enter again new password here</string>
    
    <!-- Dialogs -->
    <string name="dialog_app_exit_message">Are you sure you want to exit?</string>
    <string name="dialog_app_exit_positive_text">YES</string>
    <string name="dialog_app_exit_negative_text">NO</string>
    <string name="dialog_no_internet_connection_message">There is no internet connection!</string>
    <string name="dialog_no_internet_connection_negative_text">Done</string>
    <string name="dialog_optional_change_password_message">Your password will exprie within %1$d days, do you want to change your password now?</string>
    <string name="dialog_optional_change_password_positive_text">YES</string>
    <string name="dialog_optional_change_password_negative_text">NO</string>
    <string name="dialog_connection_types_message">Are you at the office?</string>
    <string name="dialog_connection_types_positive_text">YES</string>
    <string name="dialog_connection_types_negative_text">NO</string>
    <string name="dialog_delete_connection_message">Are you sure you want to delete this connection?</string>
    <string name="dialog_delete_connection_positive_text">YES</string>
    <string name="dialog_delete_connection_negative_text">NO</string>
    <string name="dialog_cancel_login_message">Are you sure you want to cancel login?</string>
    <string name="dialog_cancel_login_positive_text">YES</string>
    <string name="dialog_cancel_login_negative_text">NO</string>
    <string name="dialog_network_connection_issue_message">Please check your network connection?</string>
    <string name="dialog_network_connection_issue_positive_text">OK</string>
    <string name="dialog_rdp_session_logout_message">You have %1$d running %2$s:\n%3$s\n\nOn exit, unsaved data will be lost.</string>
    <plurals
        name="plural_applications">
        <item quantity="zero">application</item>
        <item quantity="one">application</item>
        <item quantity="two">applications</item>
        <item quantity="few">applications</item>
        <item quantity="many">applications</item>
        <item quantity="other">applications</item>
    </plurals>
    <string name="dialog_rdp_session_logout_positive_text">EXIT</string>
    <string name="dialog_rdp_session_logout_negative_text">CANCEL</string>
    <string name="dialog_server_error_normal_text">OK</string>
    <string name="dialog_server_error_positive_text">RETRY</string>
    <string name="dialog_server_error_negative_text_1">CANCEL</string>
    <string name="dialog_server_error_negative_text_2">CONTINUE</string>
    
    <!-- Arrays -->
    <string-array name="connection_mode_options">
        <item>SSL</item>
        <item>DIRECT</item>
    </string-array>
    <string-array name="connection_actions_options">
        <item>Connect</item>
        <item>Details</item>
        <item>Delete</item>
    </string-array>
    
    <!-- Header Activity - Titles -->
    <string name="header_title_add_connection">NEW CONNECTION</string>
    <string name="header_title_connections">CONNECTIONS</string>
    <string name="header_title_login">LOGIN</string>
    <string name="header_title_reset_password">RESET PASSWORD</string>
    <string name="header_title_last_connection_details">LAST CONNECTION</string>
    <string name="header_title_open_tasks">OPEN TASKS</string>
    <string name="header_title_about">ABOUT</string>
    <string name="header_title_help">HELP</string>
    
    <!-- Header Activity - Popup Menu -->
    <string name="header_menu_item_about">About</string>
    <string name="header_menu_item_help">Help</string>
    <string name="header_menu_item_exit">Exit</string>

</resources>