<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp" >

    <!-- Reset Password Form - Wrapper -->

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/connect_button" >

        <LinearLayout
            android:id="@+id/wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Old Password - Label -->

            <LinearLayout
                android:id="@+id/wrapper_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/star_image_right"
                    android:layout_marginTop="1dp"
                    android:src="@drawable/star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/old_password_lbl"
                    android:textColor="@color/black"
                    android:textSize="@dimen/edittext_lbl" />
            </LinearLayout>

            <!-- Old Password - Edit Text -->

            <EditText
                android:id="@+id/old_password_input"
                style="@style/GrayBorderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/black_border_square"
                android:cursorVisible="true"
                android:hint="@string/old_password_hint"
                android:inputType="text|textPassword"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/edittext_lbl" />

            <!-- New Password - Label -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/star_image_right"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/new_password_lbl"
                    android:textColor="@color/black"
                    android:textSize="@dimen/edittext_lbl" />
            </LinearLayout>

            <!-- New Password - Edit Text -->

            <EditText
                android:id="@+id/new_password_input"
                style="@style/GrayBorderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/black_border_square"
                android:cursorVisible="true"
                android:hint="@string/new_password_hint"
                android:inputType="text|textPassword"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/edittext_lbl" />

            <!-- Confirm Password Label -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/star_image_right"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/confirm_new_password_lbl"
                    android:textColor="@color/black"
                    android:textSize="@dimen/edittext_lbl" />
            </LinearLayout>

            <!-- Confirm Password Edit Text -->

            <EditText
                android:id="@+id/confirm_new_password_input"
                style="@style/GrayBorderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/black_border_square"
                android:cursorVisible="true"
                android:hint="@string/confirm_new_password_hint"
                android:imeOptions="actionGo"
                android:inputType="text|textPassword"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/edittext_lbl" />
        </LinearLayout>
    </ScrollView>

    <!-- Reset Password - Button -->

    <TextView
        android:id="@+id/reset_button"
        style="@style/DefaultButtonState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/reset_lbl"
        android:textSize="@dimen/button_text_lbl" />

</RelativeLayout>