<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="10dp" >

    <!-- Connection Form - Wrapper -->

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Connection Name - Label -->

            <LinearLayout
                android:id="@+id/wrapper_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/connection_name_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/star_icon_size"
                    android:layout_marginRight="@dimen/star_icon_size"
                    android:layout_marginTop="1dp"
                    android:src="@drawable/star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/connection_name_lbl"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/edit_text_label_text_size" />
            </LinearLayout>

            <!-- Connection Name - Edit Text -->

            <EditText
                android:id="@+id/connection_name_input"
                style="@style/GrayBorderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="@string/connection_name_hint"
                android:inputType="text"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/edit_text_label_text_size" />

            <!-- Host IP - Label -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/host_ip_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/star_icon_size"
                    android:layout_marginRight="@dimen/star_icon_size"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/host_ip_lbl"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/edit_text_label_text_size" />
            </LinearLayout>

            <!-- Host IP - Edit Text -->

            <EditText
                android:id="@+id/host_ip_input"
                style="@style/GrayBorderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="@string/host_ip_hint"
                android:inputType="date"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/edit_text_label_text_size" />

            <!-- Host Port - Label -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/host_port_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/star_icon_size"
                    android:layout_marginRight="@dimen/star_icon_size"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/host_port_lbl"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/edit_text_label_text_size" />
            </LinearLayout>

            <!-- Host Port - Edit Text -->

            <EditText
                android:id="@+id/host_port_input"
                style="@style/GrayBorderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="@string/host_port_hint"
                android:imeOptions="actionGo"
                android:inputType="number"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/edit_text_label_text_size" />

            <!-- Connection Mode - Label -->

            <TextView
                android:id="@+id/connection_mode_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingLeft="14dp"
                android:paddingStart="14dp"
                android:text="@string/connection_mode_lbl"
                android:textColor="@android:color/black"
                android:textSize="@dimen/edit_text_label_text_size" />

            <!-- Connection Mode - ComboBox -->

            <RelativeLayout
                android:id="@+id/connection_mode_spinner_wrapper"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:animateLayoutChanges="true" >

                <Spinner
                    android:id="@+id/connection_mode_spinner"
                    style="@style/MySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/spinner_background"
                    android:dropDownWidth="match_parent"
                    android:entries="@array/connection_mode_options"
                    android:hint="@string/connection_mode_hint"
                    android:listSelector="@drawable/selector_back_button"
                    android:popupBackground="#bbbbbb"
                    android:spinnerMode="dropdown"
                    android:textSize="@dimen/edit_text_label_text_size" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="16dp"
                    android:background="@drawable/down" />
            </RelativeLayout>

            <!-- Connection Mode - Edit Text -->

            <EditText
                android:id="@+id/connection_mode_input"
                style="@style/GrayBorderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="@string/connection_mode_hint"
                android:inputType="date"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/edit_text_label_text_size" />
        </LinearLayout>
    </ScrollView>

    <!-- Connect - Button -->


    <!-- Buttons -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!-- Cancel - Button -->

        <TextView
            android:id="@+id/cancel_button"
            style="@style/DefaultButtonState"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:background="@drawable/orange_button_selector"
            android:text="@string/cancel_lbl"
            android:textSize="@dimen/button_label_text_size" />

        <ImageView
            android:id="@+id/divider_horizontal"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.02" />

        <!-- Login - Button -->

        <TextView
            android:id="@+id/connect_button"
            style="@style/DefaultButtonState"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/connect_lbl"
            android:textSize="@dimen/button_label_text_size" />
    </LinearLayout>

</LinearLayout>